--- a/index.css
+++ b/index.css
@@ -9,26 +9,21 @@
 }
 
 
-
 html{
     scroll-behavior: smooth;
 }
-
 
 ::-webkit-scrollbar {
     width: 10px;
 }
 
-
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
-
 ::-webkit-scrollbar-thumb {
     background: #888;
 }
-
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
@@ -40,18 +35,15 @@ section{
     padding: 100px 0;
 }
 
-
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
     margin: auto;
 }
 
-
 .about, .services, .skills, .teams, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
-
 
 .about .about-content,
 .services .serv-content,
@@ -63,7 +55,6 @@ section{
     justify-content: space-between;
 }
 
-
 section .title{
     position: relative;
     text-align: center;
@@ -73,7 +64,6 @@ section .title{
     padding-bottom: 20px;
     font-family: 'Ubuntu', sans-serif;
 }
-
 
 section .title::before{
     content: "";
@@ -86,18 +76,16 @@ section .title::before{
     transform: translateX(-50%);
 }
 
-
 section .title::after{
     position: absolute;
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
 }
-
 
 .form{
     width: 100%;
@@ -113,12 +101,10 @@ section .title::after{
     font-family: 'Poppins', sans-serif;
 }
 
-
 .form .oi p{
     margin-top: 300px;
     text-indent: 520px;
 }
-
 
 .form #em{
     color: white;
@@ -126,13 +112,11 @@ section .title::after{
     background: linear-gradient(#31356E, #2630b9);
 }
 
-
 .form #des{
     color: white;
     border: rgb(221, 42, 78);
     background: linear-gradient(rgb(221, 42, 78), rgb(255, 49, 118));
 }
-
 
 .form h1{
     text-indent: 520px;
@@ -143,13 +127,11 @@ section .title::after{
     color: #fff;
 }
 
-
 #student{
     color: rgb(170, 170, 170);
     font-size: 30px;
     text-indent: 520px;
 }
-
 
 .form #em{
     font-family: 'Poppins', sans-serif;
@@ -163,7 +145,6 @@ section .title::after{
     font-size: 20px;
 }
 
-
 .form #des{
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -175,7 +156,6 @@ section .title::after{
     font-size: 20px;
 }
 
-
 .form #em:hover{
     border: 2px solid #3f45a0;
     background: none;
@@ -183,14 +163,12 @@ section .title::after{
     transition: 0.3s;
 }
 
-
 .form #des:hover{
     border: 2px solid rgb(221, 42, 78);
     background: none;
     color: rgb(221, 42, 78);
     transition: 0.3s;
 }
-
 
 input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     cursor: pointer;
@@ -200,13 +178,11 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: 0.7s all ease-out;
 }
 
-
 .form .tela input[type="text"], [type="password"], [type="email"], [type="date"]{
     box-shadow: none;
     border: 0 none;
     outline: none;
 }
-
 
 .form .tela2 input[type="text"], [type="password"], [type="email"], [type="date"]{
     box-shadow: none;
@@ -214,17 +190,14 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     outline: none;
 }
 
-
  #yay{
     background-color: linear-gradient(to right, #31356E, rgb(221, 42, 78));
 }
-
 
 .form ul input{
     display: contents;
     margin: 3px 10px;
 }
-
 
 .form .tela{
     margin-top: 15px;
@@ -235,7 +208,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     border-radius: 5px;
     box-shadow: #333;
 }
-
 
 .form .tela2{
     display: grid;
@@ -248,7 +220,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     box-shadow: #333;
 }
 
-
 .tela2 input{
     margin-left: 80px;
     margin-top: 28px;
@@ -257,7 +228,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     padding: 10px 25px;
     border-radius: 5px;
 }
-
 
 .tela2 h2{
     margin-top: 20px;
@@ -274,7 +244,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     font-family: 'Poppins', sans-serif;
 }
 
-
 .tela2 .sds{
     margin-top: 28px;
     border: 2px solid rgb(221, 42, 78);
@@ -283,7 +252,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     color: #fff;
     font-family: 'Poppins', sans-serif;
 }
-
 
 .tela2 label{
     margin-top: 20px;
@@ -301,21 +269,15 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
 }
-
-
 .navbar.sticky{
     padding: 15px 0;
-    background: linear-gradient(to right, #31356E,  rgb(221, 42, 78));
+    background: linear-gradient(to right, #48346c,  #d92f63);
 }
-
-
 .navbar .max-width{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
-
 .navbar .logo a{
     color: #fff;
     font-family: 'Poppins', sans-serif;
@@ -323,24 +285,22 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     font-weight: 600;
 }
 
-
-.navbar .logo a span{
-    color: rgb(221, 42, 78);
-    transition: all 0.3s ease;
+.navbar .menu li i{
+    padding-left: 6px;
 }
 
+.navbar .logo a span{
+    color: #d92f63;
+    transition: all 0.3s ease;
+}
 
 .navbar.sticky .logo a span{
     color: #fff;
 }
-
-
 .navbar .menu li{
     list-style: none;
     display: inline-block;
 }
-
-
 .navbar .menu li a{
     display: block;
     color: #fff;
@@ -349,17 +309,12 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     margin-left: 25px;
     transition: color 0.3s ease;
 }
-
-
 .navbar .menu li a:hover{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
 }
-
-
 .navbar.sticky .menu li a:hover{
     color: #fff;
 }
-
 
 .reveal {
     position: relative;
@@ -368,12 +323,10 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 2s ease;
 }
 
-
 .reveal.active{
     transform: translateY(0px);
     opacity: 1;
 }
-
 
 .cont{
     position: fixed;
@@ -387,7 +340,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     -webkit-box-reflect: below 1px linear-gradient(#0001, #0004)
 }
 
-
 .cont .loader{
     position: relative;
     width: 200px;
@@ -396,8 +348,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     background: #570e26;
     animation: animate 2s linear infinite;
 }
-
-
 
 @keyframes animate{
     0%
@@ -409,7 +359,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
        transform: rotate(360deg);
     }
 }
-
 
 .cont .loader::before{
     content: "";
@@ -447,7 +396,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
                 0 0 100px #e91e63;
 }
 
-
 .cont .loader span{
     position: absolute;
     top: 20px;
@@ -458,7 +406,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     border-radius: 50%;
 }
 
-
 .menu-btn{
     color: #fff;
     font-size: 23px;
@@ -466,12 +413,11 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     display: none;
 }
 
-
 .scroll-up-btn{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: rgb(221, 42, 78);
+    background: #d92f63;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -487,13 +433,11 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .scroll-up-btn.show{
     bottom: 30px;
     opacity: 1;
     pointer-events: auto;
 }
-
 
 .scroll-up-btn:hover{
     filter: brightness(90%);
@@ -510,53 +454,37 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     background-attachment: fixed;
     font-family: 'Ubuntu', sans-serif;
 }
-
-
 .home .max-width{
   width: 100%;
   display: flex;
 }
-
-
 .home .max-width .row{
   margin-right: 0;
 }
-
-
 .home .home-content .text-1{
     font-size: 27px;
 }
-
-
 .home .home-content .text-2{
     font-size: 75px;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
     margin-left: -3px;
 }
-
-
 .home .home-content .text-2 span{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     font-weight: 600;
 }
-
-
 .home .home-content .text-3{
     font-size: 40px;
     margin: 5px 0;
 }
-
-
 .home .home-content .text-3 span{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     font-weight: 500;
 }
-
-
 .home .home-content a{
     display: inline-block;
-    background: rgb(221, 42, 78);
+    background: #d92f63;
     font-family: 'Poppins', sans-serif;
     color: #fff;
     font-size: 25px;
@@ -564,13 +492,11 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     margin-top: 20px;
     font-weight: 410;
     border-radius: 6px;
-    border: 2px solid rgb(221, 42, 78);
+    border: 2px solid #d92f63;
     transition: all 0.3s ease;
 }
-
-
 .home .home-content a:hover{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     background: none;
 }
 
@@ -579,59 +505,52 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
 .about .title::after{
     content: "Quem somos";
 }
-
-
 .about .about-content .left{
     width: 45%;
 }
-
-
 .about .about-content .left img{
-    height: 400px;
-    width: 400px;
+    margin-top: 10px;
+    height: 470px;
+    width: 450px;
     object-fit: cover;
     border-radius: 6px;
 }
-
-
 .about .about-content .right{
     width: 55%;
 }
-
-
 .about .about-content .right .text{
     font-size: 25px;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 }
-
-
 .about .about-content .right .text span{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
 }
-
-
 .about .about-content .right p{
     text-align: justify;
+    margin-bottom: 22px;
+    font-weight: 500;
+    color: rgb(98, 98, 98);
 }
 
+u {
+    text-decoration: underline;
+    cursor: pointer;
+}
 
 .about .about-content .right a{
     display: inline-block;
-    background: rgb(221, 42, 78);
+    background: #d92f63;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
-    margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid rgb(221, 42, 78);
+    border: 2px solid #d92f63;
     transition: all 0.3s ease;
 }
-
-
 .about .about-content .right a:hover{
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     background: none;
 }
 
@@ -639,7 +558,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
 .skills .text{
     color: #fff;
 }
-
 
 .skills p{
     color: #fff;
@@ -650,21 +568,15 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     color: #fff;
     background: #111;
 }
-
-
 .services .title::before,
 .teams .title::before, .skills .title::before{
     background: #fff;
 }
-
-
 .services .title::after,
 .teams .title::after, .skills .title::after{
     background: #111;
-    content: "O que fazemos";
+    content: "Dá uma olhada";
 }
-
-
 .services .serv-content .card{
     width: calc(33% - 20px);
     background: #222;
@@ -674,33 +586,23 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     cursor: pointer;
     transition: all 0.3s ease;
 }
-
-
 .services .serv-content .card:hover{
-    background: rgb(221, 42, 78);
+    background: #d92f63;
 }
-
-
 .services .serv-content .card .box{
     transition: all 0.3s ease;
 }
-
-
 .services .serv-content .card:hover .box{
     transform: scale(1.05);
 }
-
-
 .services .serv-content .card i{
     font-size: 50px;
-    color: rgb(221, 42, 78);
+    color: #d92f63;
     transition: color 0.3s ease;
 }
-
 .services .serv-content .card:hover i{
     color: #fff;
 }
-
 .services .serv-content .card .text{
     font-size: 25px;
     font-weight: 500;
@@ -710,9 +612,8 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
 
 
 .skills .title::after{
-    content: "Confira já";
+    content: "Confira aqui";
 }
-
 
 .skills .carousel .card{
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
@@ -725,11 +626,9 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .skills .carousel .card:hover{
     background: #31356E;
 }
-
 
 .skills .carousel .card .box{
     display: flex;
@@ -739,11 +638,9 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .skills .carousel .card:hover .box{
     transform: scale(1.05);
 }
-
 
 .skills .carousel .card .text{
     color: #fff;
@@ -751,7 +648,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-
 
 .skills .carousel .card img{
     height: 170px;
@@ -761,7 +657,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .skills .carousel .card:hover img{
     transform: translate(-5px,-10px) scale(1.2);
 }
@@ -769,9 +664,8 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
 
 
 .teams .title::after{
-    content: "Descubra aqui";
+    content: "Conheça";
 }
-
 
 .teams .carousel .card{
     background: #222;
@@ -802,7 +696,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     cursor: pointer;
 }
 
-
 .skills .carousel .color span{
     width: 36px;
     height: 36px;
@@ -821,7 +714,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     cursor: pointer;
 }
 
-
 .skills .carousel .color span:nth-child(1){
     color: #fff;
     background: #3ddc28;
@@ -829,14 +721,12 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     border: 2px solid #fff;
 }
 
-
 .skills .carousel .color span:nth-child(2){
     color: #fff;
     background: #03a9f4;
     border-radius: 50%;
     border: 2px solid #fff;
 }
-
 
 .skills .carousel .color span:nth-child(3){
     color: #fff;
@@ -853,14 +743,12 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     border: 2px solid #fff;
 }
 
-
 .teams .carousel .color span:nth-child(2){
     color: #fff;
     background: #03a9f4;
     border-radius: 50%;
     border: 2px solid #fff;
 }
-
 
 .teams .carousel .color span:nth-child(3){
     color: #fff;
@@ -871,9 +759,8 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
 
 
 .teams .carousel .card:hover{
-    background: rgb(221, 42, 78);
+    background: #d92f63;
 }
-
 
 .teams .carousel .card .box{
     display: flex;
@@ -883,18 +770,15 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .teams .carousel .card:hover .box{
     transform: scale(1.05);
 }
-
 
 .teams .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-
 
 .teams .carousel .card img{
     height: 170px;
@@ -904,7 +788,6 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     border: 5px solid rgb(221, 42, 78);
     transition: all 0.3s ease;
 }
-
 
 .teams .carousel .card:hover img{
     border-color: #fff;
@@ -918,46 +801,34 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     margin-top: 20px;
 }
 
-
 .owl-dot{
     height: 13px;
     width: 13px;
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid rgb(221, 42, 78) !important;
+    border: 2px solid #d92f63 !important;
     transition: all 0.3s ease;
 }
-
 
 .owl-dot.active{
     width: 35px;
     border-radius: 14px;
 }
 
-
 .owl-dot.active,
 .owl-dot:hover{
-    background: rgb(221, 42, 78) !important;
+    background: #d92f63 !important;
 }
-
-
-.owl-dot2.active,
-.owl-dot2:hover{
-    background: rgb(221, 42, 78) !important;
-}
-
 
 
 .contact .title::after{
-    content: "Fala aí";
+    content: "Manda um oi";
 }
-
 
 .contact .contact-content .column{
     width: calc(50% - 30px);
 }
-
 
 .contact .contact-content .text{
     font-size: 20px;
@@ -965,17 +836,14 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     margin-bottom: 10px;
 }
 
-
 .contact .contact-content .left p{
     text-align: justify;
     margin-bottom: 30px;
 }
 
-
 .contact .contact-content .left .icons{
     margin: 10px 0;
 }
-
 
 .contact .contact-content .row{
     display: flex;
@@ -983,32 +851,26 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     align-items: center;
 }
 
-
 .contact .contact-content .row .info{
     margin-left: 30px;
 }
 
-
 .contact .contact-content .row i{
     font-size: 25px;
-    color: rgb(221, 42, 78);
+    color: #d92f63;
 }
-
 
 .contact .contact-content .info .head{
     font-weight: 500;
 }
 
-
 .contact .contact-content .info .sub-title{
     color: #333;
 }
 
-
 .contact .right form .fields{
     display: flex;
 }
-
 
 .contact .right form .field,
 .contact .right form .fields .field{
@@ -1017,17 +879,14 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     margin-bottom: 15px;
 }
 
-
 .contact .right form .textarea{
     height: 80px;
     width: 100%;
 }
 
-
 .contact .right form .name{
     margin-right: 10px;
 }
-
 
 .contact .right form .field input,
 .contact .right form .textarea textarea{
@@ -1042,24 +901,20 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
     transition: all 0.3s ease;
 }
 
-
 .contact .right form .field input:focus,
 .contact .right form .textarea textarea:focus{
     border-color: #b3b3b3;
 }
-
 
 .contact .right form .textarea textarea{
   padding-top: 10px;
   resize: none;
 }
 
-
 .contact .right form .button-area{
   display: flex;
   align-items: center;
 }
-
 
 .right form .button-area button{
   color: #fff;
@@ -1072,34 +927,14 @@ input[type="text"], [type="password"], [type="email"], [type="date"]:hover{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: rgb(221, 42, 78);
-  border: 2px solid rgb(221, 42, 78);
+  background: #d92f63;
+  border: 2px solid #d92f63;
   transition: all 0.3s ease;
 }
 
-
 .right form .button-area button:hover{
-  color: rgb(221, 42, 78);
+  color: #d92f63;
   background: none;
-}
-
-
-
-
-footer{
-    background: #111;
-    padding: 15px 23px;
-    color: #fff;
-    text-align: center;
-}
-
-footer span a{
-    color: rgb(221, 42, 78);
-    text-decoration: none;
-}
-
-footer span a:hover{
-    text-decoration: underline;
 }
 
 
